QR-5 SimpleClipboardManager로 코드 분리

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="qr">QR</string>
     <string name="print">Print</string>
     <string name="share">Share</string>
+    <string name="copy">Copy</string>
+    <string name="file_provider">FileProvider</string>
 </resources>
