--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,13 @@
     <string name="generate">Generate</string>
     <string name="history">History</string>
     <string name="setting">Setting</string>
+    <string name="internet">Internet</string>
+    <string name="tel">Tel</string>
+    <string name="wifi">WiFi</string>
+    <string name="location">Location</string>
+    <string name="text">Text</string>
+    <string name="contact">Contact</string>
+    <string name="email">Email</string>
+    <string name="calendar">Calendar</string>
+    <string name="message">Message</string>
 </resources>
