--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,14 @@
 <resources>
+<!--    System-->
     <string name="app_name">QR Reader</string>
+    <string name="file_provider">FileProvider</string>
+
+
+<!--    Word-->
     <string name="scan">Scan</string>
-    <string name="qr">QR</string>
     <string name="print">Print</string>
     <string name="share">Share</string>
     <string name="copy">Copy</string>
-    <string name="file_provider">FileProvider</string>
     <string name="generate">Generate</string>
     <string name="history">History</string>
     <string name="setting">Setting</string>
@@ -18,4 +21,16 @@
     <string name="email">Email</string>
     <string name="calendar">Calendar</string>
     <string name="message">Message</string>
+    <string name="code">Code</string>
+    <string name="finish">Finish</string>
+    <string name="barcode">Barcode</string>
+
+
+    <!--    String-->
+    <string name="copy_image">Copy Image</string>
+    <string name="copy_text">Copy Text</string>
+    <string name="share_code">Share Code</string>
+    <string name="copy_code">Copy Code</string>
+    <string name="print_code">Print Code</string>
+    <string name="share_image">Share Image</string>
 </resources>
