--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,4 +49,5 @@
     <string name="loading_location">Loading Location</string>
     <string name="refresh">Refresh</string>
     <string name="close">Close</string>
+    <string name="tel_number">Tel Number</string>
 </resources>
