--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -65,4 +65,5 @@
     <string name="begin_time">Begin Time</string>
     <string name="end_date">End Date</string>
     <string name="end_time">End Time</string>
+    <string name="content">Content</string>
 </resources>
