--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -66,4 +66,5 @@
     <string name="end_date">End Date</string>
     <string name="end_time">End Time</string>
     <string name="content">Content</string>
+    <string name="bookmark">Bookmark</string>
 </resources>
