--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -67,4 +67,5 @@
     <string name="end_time">End Time</string>
     <string name="content">Content</string>
     <string name="bookmark">Bookmark</string>
+    <string name="save_image">Save Image</string>
 </resources>
