--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -68,4 +68,5 @@
     <string name="content">Content</string>
     <string name="bookmark">Bookmark</string>
     <string name="save_image">Save Image</string>
+    <string name="log">Log</string>
 </resources>
