QR-29 BarcodeDataSearchDialog 생성

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -69,4 +69,6 @@
     <string name="bookmark">Bookmark</string>
     <string name="save_image">Save Image</string>
     <string name="log">Log</string>
+    <string name="name">Name</string>
+    <string name="search">Search</string>
 </resources>
